# lapka

./: .gitignore
docs/: README.md  TILDA.md
vpn/: .env  .env.example  docker-compose.yml  pyproject.toml  requirements.txt  seed.py
vpn-desktop/: Cargo.toml  index.html
vpn-desktop/src/: main.rs
vpn-desktop/src-tauri/: tauri.conf.json
vpn/.github/: secrets.md
vpn/.github/workflows/: cd.yml  ci.yml
vpn/backend/: alembic.ini
vpn/backend/alembic/: env.py
vpn/backend/app/: __init__.py  database.py  middleware.py  middleware_trace.py
vpn/backend/sql/: optimize_indexes.sql  sharding.sql
vpn/backend/tests/: conftest.py  test_auth.py  test_billing.py  test_devices.py  test_vpn.py
vpn/backup/: backup.sh
vpn/bot/app/: __init__.py  bot.py
vpn/cloudflare/: config.yaml
vpn/cloudflare/workers/: auth.js  rate-limit.js  stats.js
vpn/disaster_recovery/: plan.md
vpn/docker/: api.Dockerfile  bot.Dockerfile
vpn/docs/: SCALING_1M_USERS.md  SCALING_20M_USERS.md  TECHNICAL_ANALYSIS.md
vpn/flutter_app/: pubspec.yaml
vpn/flutter_app/lib/: main.dart
vpn/frontend/: next.config.js  package.json
vpn/frontend/app/: globals.css  layout.tsx  page.tsx
vpn/gdpr/: policy.md
vpn/helm/vpn-api/: Chart.yaml  values.yaml
vpn/istio/: istio.yaml
vpn/kubernetes/: api-deployment.yaml  bot.yaml  ingress.yaml  monitoring.yaml  vpn-nodes.yaml  wireguard-optimized.yaml  workers.yaml
vpn/kustomize/base/: kustomization.yaml
vpn/kustomize/production/: kustomization.yaml
vpn/kustomize/staging/: kustomization.yaml
vpn/loadbalancer/: haproxy.cfg
vpn/logging/: elastic-stack.yaml
vpn/monitoring/: alerts.yaml  dashboard-api.json  dashboard-billing.json  dashboard-vpn.json  dashboard.json  prometheus.yml
vpn/tauri_app/: package.json
vpn/tauri_app/src/: index.html
vpn/tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
vpn/terraform/: database.tf  multi-region.tf  vault.tf  vpn.tf
vpn/terraform/states/: backend.tf
(+1116 files in other folders)
