[package]
name = "lapka-vpn-desktop"
version = "1.0.0"
description = "Lapka VPN Desktop"
authors = ["Lapka"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open", "window-all"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }